syntax = "proto3";

option java_multiple_files = true;
option java_package = "GetHeartBeats";
option java_outer_classname = "Service3Impl";

package wearGRPC;



  //RPC server stream


service GetHeartBeats {rpc GetHeartBeats(BeatsServerStreamRequest) returns (stream BeatsResponse);


}

message BeatsServerStreamRequest
{ int32 measure = 1;
  int32 intervalB = 2; // time in seconds
}
message BeatsResponse
{  double BeatH = 1; }